--- a/film.html
+++ b/film.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< Updated upstream
     <title>Film</title>
-=======
-    <title>Somnia</title>
->>>>>>> Stashed changes
     <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
@@ -37,7 +33,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                     <!-- Navbar brand -->
                     <div>
-                        <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                        <a class="navbar-brand mt-2 mt-lg-0" href="index.html">
                             <img src="img/logo.png" height="auto" width="230px" alt="MDB Logo" loading="lazy" />
                         </a>
                     </div>
