--- a/prenotazioni.html
+++ b/prenotazioni.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                     <!-- Navbar brand -->
                     <div>
-                        <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                        <a class="navbar-brand mt-2 mt-lg-0" href="index.html">
                             <img src="img/logo.png" height="auto" width="230px" alt="MDB Logo" loading="lazy" />
                         </a>
                     </div>
@@ -175,8 +175,12 @@
     <h1 class="my-5">Prenotazioni</h1>
     <section>
 
-        <div class="container" id="containerPrenotazioni">
+        <div class="container"><button class="btn btn-lg px-5 btn-outline-warning ms-3 mb-3" id="ordinaPrenotazioni"
+                type="button">Ordina dal piu' recente</button>
+            <div class="container" id="containerPrenotazioni">
 
+
+            </div>
         </div>
 
 
