--- a/classifica.html
+++ b/classifica.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                     <!-- Navbar brand -->
                     <div>
-                        <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                        <a class="navbar-brand mt-2 mt-lg-0" href="index.html">
                             <img src="img/logo.png" height="auto" width="230px" alt="MDB Logo" loading="lazy" />
                         </a>
                     </div>
