--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                     <!-- Navbar brand -->
                     <div>
-                        <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                        <a class="navbar-brand mt-2 mt-lg-0" href="index.html">
                             <img src="img/logo.png" height="auto" width="230px" alt="MDB Logo" loading="lazy" />
                         </a>
                     </div>
@@ -101,7 +101,7 @@
                                         href="profilo.html">Profilo</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item elemento-tendina" href="#">Impostazioni</a>
+                                    <a class="dropdown-item elemento-tendina" href="#" id="adminPanel">Admin</a>
                                 </li>
                                 <li>
                                     <a id="btnLogout" class="dropdown-item elemento-tendina" href="#">Logout</a>
@@ -174,7 +174,7 @@
 
 
     <div class="container-film gy-5">
-        <div class="container" id="containerFilmSala">
+        <div class="container position-relative" id="containerFilmSala">
         </div>
     </div>
 
@@ -326,8 +326,7 @@
                                 <p class="small pb-lg-2"><a class="text-white-50" href="#!" data-mdb-toggle="modal"
                                         data-mdb-target="#modalRecuperaPassword">Dimenticato la password?</a></p>
 
-                                <button class="btn btn-outline-light btn-lg px-5" type="submit"
-                                    id="submitLogin">Login</button>
+                                <button class="btn btn-outline-light btn-lg px-5" id="submitLogin" type="button">Login</button>
 
                                 <div class="d-flex justify-content-center text-center mt-4 pt-1">
                                     <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
@@ -367,7 +366,7 @@
                             <label class="form-label" for="emailRecupera">Email</label>
                         </div>
 
-                        <button class="btn btn-outline-light btn-lg px-5" type="submit"
+                        <button class="btn btn-outline-light btn-lg px-5" type="button"
                             id="submitRecupera">Recupera</button>
 
                         <div class="d-flex justify-content-center text-center mt-4 pt-1">
@@ -441,8 +440,8 @@
                                 </div>
 
                                 <div class="container mt-3">
-                                    <button class="btn btn-outline-light btn-lg px-5" type="submit"
-                                        id="submitRegister">Registrati</button>
+                                    <button class="btn btn-outline-light btn-lg px-5"
+                                        id="submitRegister" type="button">Registrati</button>
                                 </div>
                             </form>
                         </div>
