--- a/News&Offerte.html
+++ b/News&Offerte.html
@@ -267,7 +267,7 @@
                             <a href="chisiamo.html" class="text-reset">Chi siamo</a>
                         </p>
                         <p>
-                            <a href="lavoraconnoi.html" class="text-reset">Lavora con noi</a>
+                            <a href="workinprogress.html" class="text-reset">Lavora con noi</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -297,13 +297,13 @@
                             Useful links
                         </h6>
                         <p>
-                            <a href="pricing.html" class="text-reset">Pricing</a>
+                            <a href="workinprogress.html" class="text-reset">Pricing</a>
                         </p>
                         <p>
-                            <a href="help.html" class="text-reset">Help</a>
+                            <a href="workinprogress.html" class="text-reset">Help</a>
                         </p>
                         <p>
-                            <a href="faq.html" class="text-reset">FAQ</a>
+                            <a href="workinprogress.html" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
