--- a/admin.html
+++ b/admin.html
@@ -44,16 +44,16 @@
                     <div>
                         <ul class="navbar-nav mb-2 mb-lg-0">
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">Biglietteria</a>
+                                <a class="nav-link sezione" href="index.html">Biglietteria</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">Classifica</a>
+                                <a class="nav-link sezione" href="classifica.html">Classifica</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">News</a>
+                                <a class="nav-link sezione" href="News&Offerte.html">News</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">Coming soon</a>
+                                <a class="nav-link sezione" href="comingsoon.html">Coming soon</a>
                             </li>
                             <li class="nav-item mx-2">
                                 <p style="color: black">asdasdasdasd</p>
