--- a/chisiamo.html
+++ b/chisiamo.html
@@ -51,7 +51,7 @@
                                 <a class="nav-link sezione" href="News&Offerte.html">News</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">Coming soon</a>
+                                <a class="nav-link sezione" href="comingsoon.html">Coming soon</a>
                             </li>
                             <li class="nav-item mx-2">
                                 <p style="color: black">asdasdasdasd</p>
@@ -184,7 +184,7 @@
                             <a href="chisiamo.html" class="text-reset">Chi siamo</a>
                         </p>
                         <p>
-                            <a href="lavoraconnoi.html" class="text-reset">Lavora con noi</a>
+                            <a href="workinprogress.html" class="text-reset">Lavora con noi</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -214,13 +214,13 @@
                             Useful links
                         </h6>
                         <p>
-                            <a href="pricing.html" class="text-reset">Pricing</a>
+                            <a href="workinprogress.html" class="text-reset">Pricing</a>
                         </p>
                         <p>
-                            <a href="help.html" class="text-reset">Help</a>
+                            <a href="workinprogress.html" class="text-reset">Help</a>
                         </p>
                         <p>
-                            <a href="faq.html" class="text-reset">FAQ</a>
+                            <a href="workinprogress.html" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
