footer cambio testi

--- a/admin.html
+++ b/admin.html
@@ -292,8 +292,8 @@
     </div>
 
 
-    <!-- Footer -->
-    <footer class="text-center text-lg-start bg-BLACK text-muted GY-5">
+     <!-- Footer -->
+     <footer class="text-center text-lg-start bg-BLACK text-muted GY-5">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <!-- Left -->
@@ -329,7 +329,10 @@
                             <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
                         </h6>
                         <p>
-                            Dove i tuoi sogni diventano realtà
+                            <a href="chisiamo.html" class="text-reset">Chi siamo</a>
+                        </p>
+                        <p>
+                            <a href="workinprogress.html" class="text-reset">Lavora con noi</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -338,13 +341,16 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Products
+                            Note Legali
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Angular</a>
+                            <a href="Privacy.html" class="text-reset">Privacy Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">React</a>
+                            <a href="Cookie.html" class="text-reset">Cookie Policy</a>
+                        </p>
+                        <p>
+                            <a href="Condizioni.html" class="text-reset">Condizioni di utilizzo</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -353,13 +359,16 @@
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Useful links
+                            Link utili
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Pricing</a>
+                            <a href="workinprogress.html" class="text-reset">Partners</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Help</a>
+                            <a href="workinprogress.html" class="text-reset">Help</a>
+                        </p>
+                        <p>
+                            <a href="workinprogress.html" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -367,7 +376,7 @@
                     <!-- Grid column -->
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                        <h6 class="text-uppercase fw-bold mb-4">Contatti</h6>
                         <p><i class="fas fa-home me-3 text-secondary"></i> Via Domodossola 42, Torino</p>
                         <p>
                             <i class="fas fa-envelope me-3 text-secondary"></i>
@@ -377,6 +386,12 @@
                     </div>
                     <!-- Grid column -->
                 </div>
+                <div class="row">
+                    <div id="teamKino">
+                        <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1038024954538643516/logo_tk.png"
+                            height="100vw" alt="" class="center">
+                    </div>
+                </div>
                 <!-- Grid row -->
             </div>
         </section>
@@ -385,7 +400,9 @@
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
             © 2022 Copyright:
-            <a class="text-reset" href="https://mdbootstrap.com/">SOMNIA CINEMA</a>
+            <a class="text-reset" href="https://mdbootstrap.com/">Somnia Cinema</a>
+            <br>
+            <a>A product by Team Kino</a>
         </div>
         <!-- Copyright -->
     </footer>
