--- a/chisiamo.html
+++ b/chisiamo.html
@@ -211,10 +211,10 @@
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Useful links
+                            Link utili
                         </h6>
                         <p>
-                            <a href="workinprogress.html" class="text-reset">Pricing</a>
+                            <a href="workinprogress.html" class="text-reset">Partners</a>
                         </p>
                         <p>
                             <a href="workinprogress.html" class="text-reset">Help</a>
@@ -228,7 +228,7 @@
                     <!-- Grid column -->
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                        <h6 class="text-uppercase fw-bold mb-4">Contatti</h6>
                         <p><i class="fas fa-home me-3 text-secondary"></i> Via Domodossola 42, Torino</p>
                         <p>
                             <i class="fas fa-envelope me-3 text-secondary"></i>
