--- a/comingsoon.html
+++ b/comingsoon.html
@@ -179,121 +179,121 @@
     </div>
 
 
-    <!-- Footer -->
-    <footer class="text-center text-lg-start bg-BLACK text-muted GY-5">
-        <!-- Section: Social media -->
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <!-- Left -->
-            <div class="me-1 d-none d-lg-block">
-            </div>
-            <!-- Left -->
-
-            <!-- Right -->
-            <div>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </div>
-            <!-- Right -->
-        </section>
-        <!-- Section: Social media -->
-
-        <!-- Section: Links  -->
-        <section class="">
-            <div class="container text-center text-md-start mt-5">
-                <!-- Grid row -->
-                <div class="row mt-3">
-                    <!-- Grid column -->
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                        <!-- Content -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
-                        </h6>
-                        <p>
-                            <a href="chisiamo.html" class="text-reset">Chi siamo</a>
-                        </p>
-                        <p>
-                            <a href="workinprogress.html" class="text-reset">Lavora con noi</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Note Legali
-                        </h6>
-                        <p>
-                            <a href="Privacy.html" class="text-reset">Privacy Policy</a>
-                        </p>
-                        <p>
-                            <a href="Cookie.html" class="text-reset">Cookie Policy</a>
-                        </p>
-                        <p>
-                            <a href="Condizioni.html" class="text-reset">Condizioni di utilizzo</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Useful links
-                        </h6>
-                        <p>
-                            <a href="workinprogress.html" class="text-reset">Pricing</a>
-                        </p>
-                        <p>
-                            <a href="workinprogress.html" class="text-reset">Help</a>
-                        </p>
-                        <p>
-                            <a href="workinprogress.html" class="text-reset">FAQ</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                        <p><i class="fas fa-home me-3 text-secondary"></i> Via Domodossola 42, Torino</p>
-                        <p>
-                            <i class="fas fa-envelope me-3 text-secondary"></i>
-                            info@somniacinema.com
-                        </p>
-                        <p><i class="fas fa-phone me-3 text-secondary"></i> +32 3920043667</p>
-                    </div>
-                    <!-- Grid column -->
-                </div>
-                <div class="row">
-                    <div id="teamKino">
-                        <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1038024954538643516/logo_tk.png"
-                            height="100vw" alt="" class="center">
-                    </div>
-                </div>
-                <!-- Grid row -->
-            </div>
-        </section>
-        <!-- Section: Links  -->
-
-        <!-- Copyright -->
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-            © 2022 Copyright:
-            <a class="text-reset" href="https://mdbootstrap.com/">Somnia Cinema</a>
-            <br>
-            <a>A product by Team Kino</a>
+ <!-- Footer -->
+ <footer class="text-center text-lg-start bg-BLACK text-muted GY-5">
+    <!-- Section: Social media -->
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <!-- Left -->
+        <div class="me-1 d-none d-lg-block">
         </div>
-        <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
+        <!-- Left -->
+
+        <!-- Right -->
+        <div>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
+        <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Links  -->
+    <section class="">
+        <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <!-- Content -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
+                    </h6>
+                    <p>
+                        <a href="chisiamo.html" class="text-reset">Chi siamo</a>
+                    </p>
+                    <p>
+                        <a href="workinprogress.html" class="text-reset">Lavora con noi</a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Note Legali
+                    </h6>
+                    <p>
+                        <a href="Privacy.html" class="text-reset">Privacy Policy</a>
+                    </p>
+                    <p>
+                        <a href="Cookie.html" class="text-reset">Cookie Policy</a>
+                    </p>
+                    <p>
+                        <a href="Condizioni.html" class="text-reset">Condizioni di utilizzo</a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Link utili
+                    </h6>
+                    <p>
+                        <a href="workinprogress.html" class="text-reset">Partners</a>
+                    </p>
+                    <p>
+                        <a href="workinprogress.html" class="text-reset">Help</a>
+                    </p>
+                    <p>
+                        <a href="workinprogress.html" class="text-reset">FAQ</a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">Contatti</h6>
+                    <p><i class="fas fa-home me-3 text-secondary"></i> Via Domodossola 42, Torino</p>
+                    <p>
+                        <i class="fas fa-envelope me-3 text-secondary"></i>
+                        info@somniacinema.com
+                    </p>
+                    <p><i class="fas fa-phone me-3 text-secondary"></i> +32 3920043667</p>
+                </div>
+                <!-- Grid column -->
+            </div>
+            <div class="row">
+                <div id="teamKino">
+                    <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1038024954538643516/logo_tk.png"
+                        height="100vw" alt="" class="center">
+                </div>
+            </div>
+            <!-- Grid row -->
+        </div>
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+        © 2022 Copyright:
+        <a class="text-reset" href="https://mdbootstrap.com/">Somnia Cinema</a>
+        <br>
+        <a>A product by Team Kino</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+<!-- Footer -->
 
     <!-- Modal Login -->
     <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
