--- a/film.html
+++ b/film.html
@@ -100,7 +100,7 @@
                                         href="profilo.html">Profilo</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item elemento-tendina" href="#">Impostazioni</a>
+                                    <a class="dropdown-item elemento-tendina imp" href="#">Impostazioni</a>
                                 </li>
                                 <li>
                                     <a id="btnLogout" class="dropdown-item elemento-tendina" href="#">Logout</a>
