--- a/chisiamo.html
+++ b/chisiamo.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body>
+<body style="height: 85rem;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: black !important;">
             <!-- Container wrapper -->
@@ -145,7 +145,7 @@
     <img src="img/logo.png" height="auto" width="600vw" alt="MDB Logo" loading="lazy" class="imglogo1 mt-5">
 
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-BLACK text-muted GY-5">
+    <footer class="text-center text-lg-start bg-BLACK text-muted GY-5 fixed-bottom">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <!-- Left -->
