--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                         href="profilo.html">Profilo</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item elemento-tendina" href="#" id="adminPanel">Admin</a>
+                                    <a class="dropdown-item elemento-tendina imp" href="#" id="adminPanel">Admin</a>
                                 </li>
                                 <li>
                                     <a id="btnLogout" class="dropdown-item elemento-tendina" href="#">Logout</a>
@@ -174,6 +174,22 @@
 
 
     <div class="container-film gy-5">
+        <div class="container">
+            <div class="row">
+                <div class="col text-start">
+                    <h2>NUOVI ARRIVI</h2>
+                </div>
+                <div class="col-2 mb-2 form-outline form-white" id="searchDiv"> <input type="text" id="searchBar"
+                        class="form-control" />
+                    <label class="form-label" for="searchBar">Cerca film</label>
+                    <div class="dropdown">
+                        <ul class="dropdown-menu dropdown-menu-dark" id="dropDownSearch" aria-labelledby="dropdownMenu2">
+                        </ul>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
         <div class="container position-relative" id="containerFilmSala">
         </div>
     </div>
@@ -305,7 +321,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <div class="pb-5">
-                        <div >
+                        <div>
                             <form id="formLogin">
                                 <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
                                 <p class="text-white-50 mb-5">Inserire email e password!</p>
@@ -326,7 +342,8 @@
                                 <p class="small pb-lg-2"><a class="text-white-50" href="#!" data-mdb-toggle="modal"
                                         data-mdb-target="#modalRecuperaPassword">Dimenticato la password?</a></p>
 
-                                <button class="btn btn-outline-light btn-lg px-5" id="submitLogin" type="button">Login</button>
+                                <button class="btn btn-outline-light btn-lg px-5" id="submitLogin"
+                                    type="button">Login</button>
 
                                 <div class="d-flex justify-content-center text-center mt-4 pt-1">
                                     <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
@@ -440,8 +457,8 @@
                                 </div>
 
                                 <div class="container mt-3">
-                                    <button class="btn btn-outline-light btn-lg px-5"
-                                        id="submitRegister" type="button">Registrati</button>
+                                    <button class="btn btn-outline-light btn-lg px-5" id="submitRegister"
+                                        type="button">Registrati</button>
                                 </div>
                             </form>
                         </div>
