--- a/News&Offerte.html
+++ b/News&Offerte.html
@@ -206,7 +206,7 @@
                 <p class="descrizione text-start">Tutte le tue emozioni possono rivivere sul grande schermo: la tua
                     proposta di
                     matrimonio, le immagini di famiglia e tutto ciò che desideri può diventare ancora più magico in una
-                    sala del nostro cinema! Scopri di più direttamente presso Somnia Cinema </p>
+                    sala del nostro cinema! Scopri di più direttamente presso Somnia Cinema. </p>
             </div>
         </div>
         <div class="row">
