--- a/admin.html
+++ b/admin.html
@@ -268,7 +268,7 @@
 
 
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-BLACK text-muted GY-5 fixed-bottom">
+    <footer class="text-center text-lg-start bg-BLACK text-muted GY-5">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <!-- Left -->
